--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/in-silico/judge-backend#readme",
   "devDependencies": {
-    "tap": "^5.0.0"
+    "tap": "^5.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
     "colors": "^1.1.2",
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "mongoose": "^4.3.5",
     "morgan": "^1.6.1"
   }
 }
