--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "colors": "^1.1.2",
     "debug": "^2.2.0",
     "express": "^4.13.3",
+    "kerberos": "0.0.17",
     "mongoose": "^4.3.5",
     "morgan": "^1.6.1",
     "multer": "^1.1.0"
