--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "colors": "^1.1.2",
+    "cors": "^2.7.1",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "kerberos": "0.0.17",
