--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "kerberos": "0.0.17",
     "mongoose": "^4.3.5",
     "morgan": "^1.6.1",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "tar.gz": "^1.0.3"
   }
 }
