--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
+    "gunzip-maybe": "^1.3.1",
     "kerberos": "0.0.17",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.3.5",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "tar.gz": "^1.0.3"
+    "tar-stream": "^1.3.2"
   }
 }
