--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "mkdir -p data && mkdir -p data/submissions && mkdir -p data/problems",
     "start": "node bin/www",
     "start-dev": "DEBUG=judge-backend:* nodemon bin/www",
-    "test": "tap test/*.js"
+    "test": "npm run test:lint && npm run test:unit",
+    "test:lint": "semistandard",
+    "test:unit": "tap test/*.js"
   },
   "repository": {
     "type": "git",
@@ -40,7 +42,9 @@
     "multer": "^1.1.0",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "tar-stream": "^1.3.2",
-    "stream-set": "^1.1.0"
+    "pre-commit": "^1.1.3",
+    "semistandard": "^8.0.0",
+    "stream-set": "^1.1.0",
+    "tar-stream": "^1.3.2"
   }
 }
