--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "tap": "^5.0.1"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.14.2",
+    "cn-utils": "^1.0.0",
     "colors": "^1.1.2",
     "connect-mongo": "^1.1.0",
     "cors": "^2.7.1",
@@ -35,9 +37,10 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "gunzip-maybe": "^1.3.1",
+    "jwt-simple": "^0.5.0",
     "kerberos": "0.0.17",
     "mkdirp": "^0.5.1",
-    "mongoose": "^4.3.5",
+    "mongoose": "^4.5.1",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
     "passport": "^0.3.2",
